--- a/style.css
+++ b/style.css
@@ -1,103 +1,5 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid rgb(167, 164, 164);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
 
-.logo{
-    width: 100px;
-}
 
-.nav-items > ul{
-    font-size: 1.2rem;
-    display: flex;
-    list-style-type: none;
-    margin: 10px 30px;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-items > ul > li{
-    padding: 10px;
-    margin: 10px;
-}
-
-.search{
-    padding: 20px;
-}
-
-.res-card{
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 280px;
-    height: 510px;
-    padding: 10px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    margin: 10px;
-    margin-top: 50px;
-    text-decoration:none !important;
-
-    color: black;
-}
-.res-card:hover{
-    border: 1px solid rgb(167, 164, 164);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    cursor: pointer;
-}
-
-.res-logo{
-    width:100%;
-}
-.restaurant-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.res-img{
-    width: 100%;
-    height: 50%;
-}
-
-.filter{
-    display: flex;
-    justify-content: flex-end;
-}
-.filter-btn{
-    margin: 15px;
-    cursor: pointer;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.shimmer-card{
-    width: 280px;
-    height: 510px;
-    padding: 10px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    margin: 10px;
-    margin-top: 50px;
-    
-}
-
-.Login{
-    align-items: center;
-    height: 40px;
-    padding: 0px 5px;
-    cursor: pointer;
-    color: black;
-    background-color: #f0f0f0;
-    border: 1px solid rgb(88, 99, 110);
-    border-radius:6px ;
-    box-shadow: inset;
-}
-
-Link{
-    text-decoration: none !important;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
